@@ -76,7 +76,7 @@ function jumpstart_css() {
 		return;
 	}
 
-	// Theme version_compare
+	// Theme version
 	$theme = wp_get_theme( get_template() );
 	$ver = $theme->get('Version');
 
@@ -124,8 +124,12 @@ function jumpstart_scripts() {
 
 	global $themeblvd_framework_scripts;
 
+	// Theme version
+	$theme = wp_get_theme( get_template() );
+	$ver = $theme->get('Version');
+
 	// Theme-specific script
-	wp_enqueue_script( 'themeblvd_theme', esc_url( get_template_directory_uri() . '/assets/js/theme.js' ), $themeblvd_framework_scripts, null, true );
+	wp_enqueue_script( 'themeblvd_theme', esc_url( get_template_directory_uri() . '/assets/js/theme.js' ), $themeblvd_framework_scripts, $ver, themeblvd_supports('assets', 'in_footer') );
 
 }
 add_action( 'wp_enqueue_scripts', 'jumpstart_scripts' );
